--- a/src/Forms/Search.css
+++ b/src/Forms/Search.css
@@ -1,106 +1,54 @@
-:root {
-  /* --rad: 0.7rem; */
-  --dur: 0.3s;
-  --color-dark: #2f2f2f;
-  --color-light: #3C4553;
-  --color-brand: #57bd84;
-  --font-fam: "Inter", sans-serif;
-  --height: 4rem;
-  --btn-width: 4rem;
-  --bez: cubic-bezier(0, 0, 0.43, 1.49);
+.searchBox {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform:  translate(-50%,50%);
+  background: #2f3640;
+  height: 50px;
+  border-radius: 50px;
+  padding: 10px;
+
+}
+.searchBox:hover > .searchInput {
+  width: 250px;
+  padding: 0 6px;
 }
 
-
-
-html {
-  box-sizing: border-box;
-  height: 100%;
-  font-size: 10px;
+.searchBox:hover > .searchButton {
+background: #fff;
+color : #2f3640;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-form {
-  margin-left: 450px;
-  margin-bottom: 3px;
-  position: relative;
-  width: 15rem;
-  background: var(--color-brand);
-  border-radius: var(--rad);
-}
-
-input,
-button {
-  height: var(--height);
-  font-family: var(--font-fam);
-  border: 0;
-  color: var(--color-dark);
-  font-size: 1.8rem;
-}
-
-input[type=search] {
-  outline: 0;
-  width: 100%;
-  background: var(--color-light);
+.searchButton {
   color: white;
-  padding: 0 1.6rem;
-  border-radius: var(--rad);
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  transition: all var(--dur) var(--bez);
-  transition-property: width, border-radius;
-  z-index: 1;
-  position: relative;
+  float: right;
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+  border-radius: 50%;
+  background: #2f3640;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.4s;
 }
 
-button {
-  display: none;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: var(--btn-width);
-  font-weight: bold;
-  background: var(--color-brand);
-  border-radius: 0 var(--rad) var(--rad) 0;
-}
-
-input:not(:-moz-placeholder-shown) {
-  border-radius: var(--rad) 0 0 var(--rad);
-  width: calc(100% - var(--btn-width));
-}
-
-input:not(:-ms-input-placeholder) {
-  border-radius: var(--rad) 0 0 var(--rad);
-  width: calc(100% - var(--btn-width));
-}
-
-input:not(:placeholder-shown) {
-  border-radius: var(--rad) 0 0 var(--rad);
-  width: calc(100% - var(--btn-width));
-}
-input:not(:-moz-placeholder-shown) + button {
-  display: block;
-}
-input:not(:-ms-input-placeholder) + button {
-  display: block;
-}
-input:not(:placeholder-shown) + button {
-  display: block;
-}
-
-label {
-
-  position: absolute;
-  clip: rect(1px, 1px, 1px, 1px);
+.searchInput {
+  border:none;
+  background: none;
+  outline:none;
+  float:left;
   padding: 0;
-  border: 0;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
-  
+  color: white;
+  font-size: 16px;
+  transition: 0.4s;
+  line-height: 50px;
+  width: 0px;
 }
+
+@media screen and (max-width: 620px) {
+  .searchBox:hover > .searchInput {
+      width: 150px;
+      padding: 0 6px;
+  }
+  }
