--- a/src/Forms/Search.css
+++ b/src/Forms/Search.css
@@ -4,13 +4,15 @@
   background-color: white;
   margin-left: 200px;
   margin-bottom: 7px;
+  display: flex;
+  flex-direction: row;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   display: block;
-  color: black;
+  color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -27,9 +29,11 @@
   float: right;
   padding: 6px;
   border: none;
-  margin-top: 8px;
+  margin-top: 5px;
   margin-right: 16px;
   font-size: 17px;
+  width: 40%;
+  border-radius: 10px;
 }
 
 /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
@@ -45,4 +49,23 @@
   .topnav input[type=text] {
     border: 1px solid #ccc;
   }
+}
+
+.search-button {
+  width: 5vh;
+  height: 5vh;
+  background-color: white;
+  border-radius: 50px;
+ border: solid;
+}
+
+.search-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.search-image:hover {
+  background-image: black;
 }
