--- a/src/App.css
+++ b/src/App.css
@@ -4,31 +4,29 @@
   flex-direction: column;
   align-items: center;
   overflow: hidden;
-  
 }
 
 .navbar {
   height: 10vh;
   width: 100%;
-  background-color:white;
+  background-color: white;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
   border: solid;
-
 }
 
 .main-logo {
-  height: 10vh;
-  width: 5%;
-  background-color: grey;
+  /* height: 10vh; */
+  width: 4%;
   border-radius: 50px;
   cursor: pointer;
+  margin-left: 0.5vw;
 }
 
 #main-logo {
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
 }
 
 .reg {
@@ -47,7 +45,6 @@
   background-color: black;
 }
 
-
 .clickme h1 {
   color: white;
   font-size: 20px;
@@ -59,7 +56,6 @@
   cursor: pointer;
 } */
 
-
 #podId {
   cursor: pointer;
 }
@@ -68,7 +64,7 @@
   margin-left: 580px;
   width: 30%;
   height: 50%;
-  background-color:white;
+  background-color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -91,22 +87,22 @@
 }
 
 #butt h1:hover {
-  color: #FF3D00;
+  color: #ff3d00;
   cursor: pointer;
 }
 
 .app {
   margin-top: 1vh;
-    height: 85vh;
-    width: 80%;
-    /* margin-right: 250px; */
-    background-color: white;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    overflow: scroll;
-    /* border: solid; */
-    overflow-y: hidden;
-    overflow-x: hidden;
+  height: 85vh;
+  width: 80%;
+  /* margin-right: 250px; */
+  background-color: white;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: scroll;
+  /* border: solid; */
+  overflow-y: hidden;
+  overflow-x: hidden;
 }
